example/secondfile/objects/ASR_Data_Load__c.object
<CustomObject>
    <description>Let User upload ASE Site inventory information into SFDC</description>
    <fields>
        <fullName>Error_Report__c</fullName>
        <label>Error Report</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>54</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Date_Time__c</fullName>
        <label>Upload Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Upload_Status__c</fullName>
        <label>Upload Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Failed While Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uploaded_By__c</fullName>
        <label>Uploaded By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>ASR Data Load - ASE Quoting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>File_Name__c</columns>
        <columns>Upload_Date_Time__c</columns>
        <columns>Uploaded_By__c</columns>
        <columns>Upload_Status__c</columns>
        <columns>Error_Report__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASR DL - {000000}</displayFormat>
        <label>ASR DL</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASR Data Load - ASE Quoting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>